--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,153 @@
     "version": "0.2.0",
     "configurations": [
         
+
+
         {
-            "type": "COBOL",
+            "type": "cobol",
             "request": "launch",
-            "name": "COBOL Debugger",
-            "commandLine": "${command:commandLineBuild}",
+            "name": "COBOL (native): Remote-SSH",
+            "program": "<insert-program-name-here>",
+            "env": [
+                {
+                    "name": "TERM",
+                    "value": "xterm"
+                },
+                {
+                    "name": "DISPLAY",
+                    "value": "<hostname-or-ip:D.S>"
+                }
+            ],
             "stopOnEntry": true
         },
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native): remote",
+            "program": "<insert-program-name-here>",
+            "remoteDebug": {
+                "machine": "Please enter the name or IP address of the machine runing cobdebugremote.",
+                "port": 0
+            },
+            "stopOnEntry": true
+        },
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native): 64-bit",
+            "program": "${workspaceFolder}/<insert-program-name-here>",
+            "cwd": "${workspaceFolder}",
+            "is64Bit": true,
+            "stopOnEntry": true
+        },
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native)",
+            "program": "${workspaceFolder}/<insert-program-name-here>",
+            "cwd": "${workspaceFolder}",
+            "stopOnEntry": true
+        },
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native): Enterprise Server",
+            "enterpriseServer": {
+                "serverName": "Please enter the name of the server to debug.",
+                "serverAddress": "Please enter the address of the 'mfcs-mp' or 'soap' listener for the server. eg tcp:127.0.0.1:<nnn>."
+            }
+        },
+        {
+            "type": "cobol",
+            "request": "attach",
+            "name": "COBOL (native): Attach to process",
+            "processId": "${command:pickProcess}"
+        },
+
+        
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native): Remote-SSH",
+            "program": "<insert-program-name-here>",
+            "env": [
+                {
+                    "name": "TERM",
+                    "value": "xterm"
+                },
+                {
+                    "name": "DISPLAY",
+                    "value": "<hostname-or-ip:D.S>"
+                }
+            ],
+            "stopOnEntry": true
+        },
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native): remote",
+            "program": "<insert-program-name-here>",
+            "remoteDebug": {
+                "machine": "Please enter the name or IP address of the machine runing cobdebugremote.",
+                "port": 0
+            },
+            "stopOnEntry": true
+        },
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native): 64-bit",
+            "program": "${workspaceFolder}/<insert-program-name-here>",
+            "cwd": "${workspaceFolder}",
+            "is64Bit": true,
+            "stopOnEntry": true
+        },
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native)",
+            "program": "${workspaceFolder}/<insert-program-name-here>",
+            "cwd": "${workspaceFolder}",
+            "stopOnEntry": true
+        },
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native): Enterprise Server",
+            "enterpriseServer": {
+                "serverName": "Please enter the name of the server to debug.",
+                "serverAddress": "Please enter the address of the 'mfcs-mp' or 'soap' listener for the server. eg tcp:127.0.0.1:<nnn>."
+            }
+        },
+        {
+            "type": "cobol",
+            "request": "attach",
+            "name": "COBOL (native): Attach to process",
+            "processId": "${command:pickProcess}"
+        },
+        {
+            "type": "cobol",
+            "request": "launch",
+            "name": "COBOL (native): Enterprise Server",
+            "enterpriseServer": {
+                "serverName": "Please enter the name of the server to debug.",
+                "serverAddress": "Please enter the address of the 'mfcs-mp' or 'soap' listener for the server. eg tcp:127.0.0.1:<nnn>."
+            }
+        },
+        {
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}"
+            ],
+            "name": "Uruchom rozszerzenie",
+            "outFiles": [
+                "${workspaceFolder}/out/**/*.js"
+            ],
+            "preLaunchTask": "npm",
+            "request": "launch",
+            "type": "extensionHost"
+        },
+        
+        
         
         {
             "type": "cobol",
